<resources>
    <string name="app_name">Wanderscope</string>
    <string name="action_settings">Settings</string>
    <string name="your_trip">Your Trip</string>
    <string name="unexpected_error_short">Something didn\'t work</string>
    <string name="unexpected_error">Something didn\'t work. Please check your internet connection and try again</string>
    <string name="retry">Retry</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in with email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password_email">Check your email account please</string>
    <string name="forgot_password_email_wrong">Enter valid email please</string>
    <string name="login_failed">The email or password is incorrect</string>
    <string name="register_button">Register</string>
    <string name="validation_email_blank">Email cannot be blank</string>
    <string name="validation_email_long">Email should have 254 or less characters</string>
    <string name="validation_email_invalid">The email address has an invalid format</string>
    <string name="validation_password_blank">Password cannot be blank</string>
    <string name="validation_password_short">Password should have at least 8 characters</string>
    <string name="validation_password_long">Password should have 50 or less characters</string>
    <string name="validation_password_not_match">Passwords don\'t match</string>
    <string name="validation_username_blank">Username cannot be blank</string>
    <string name="validation_username_short">Username should have at least 3 characters</string>
    <string name="validation_username_long">Username should have 30 or less characters</string>
    <string name="validation_username_invalid">Username cannot contain newline, \'~\' and \';\' characters</string>
    <string name="validation_displayname_blank">Display name cannot be blank</string>
    <string name="validation_displayname_short">Display name should have at least 3 characters</string>
    <string name="validation_displayname_long">Display name should have 30 or less characters</string>
    <string name="validation_displayname_invalid">Display name cannot contain newline, \'~\' and \';\' characters</string>
    <string name="validation_document_key_short">Key should have at least 3 characters</string>
    <string name="validation_document_key_long">Key should have 50 or less characters</string>
    <string name="validation_document_key_blank">Key cannot be blank</string>
    <string name="validation_blank">The field cannot be blank</string>
    <string name="validation_too_long">Maximum length exceeded</string>
    <string name="login_email_hint">Your email</string>
    <string name="login_password_hint">Your password</string>
    <string name="login_password_forgot">Forgot password?</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="new_to_wanderscope">New to Wanderscope?</string>
    <string name="forgot_password_subtitle">Don\'t worry! It happens. Please enter the email address associated with your account.</string>
    <string name="change_password_subtitle">Changing password is never a bad idea. Please enter the current password and a new one.</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign up</string>
    <string name="register_subtitle">Welcome on board! Happy to see you. You can later sign in with your entered email and password combination.</string>
    <string name="register_username_hint">You can later change your name</string>
    <string name="register_password_hint">New password</string>
    <string name="register_confirm_password_hint">Confirm new password</string>
    <string name="register_email_already_exists">An account with this email already exists.</string>
    <string name="register_username_already_exists">An account with this username already exists.</string>
    <string name="home">Home</string>
    <string name="trips_label">Your trips</string>
    <string name="trips">Trips</string>
    <string name="account">Account</string>
    <string name="upcoming_trips">Upcoming trips</string>
    <string name="passwords_same_as_current">The password is the same as the current</string>
    <string name="passwords_same_as_new">The password is the same as the new one</string>
    <string name="entered_password_is_wrong">The entered password is wrong</string>
    <string name="password_changed">Password changed</string>
    <string name="display_name_subtitle">Display name will be visible for other users instead of your username. Leave blank if you want to remove your display name.</string>
    <string name="change_display_name">Change display name</string>
    <string name="set_display_name">Set display name</string>
    <string name="updating_display_name">Updating display name</string>
    <string name="duration_between_two_dates" translatable="false">%1$s - %2$s</string>
    <string name="duration_days_hours_minutes">%1$dd %2$dh %3$dm</string>
    <string name="duration_hours_minutes">%1$dh %2$dm</string>
    <string name="duration_minutes">%dm</string>
    <string name="past_trips">Where you\'ve been</string>
    <string name="no_past_trips_title">You\'ve been nowhere yet</string>
    <string name="no_past_trips_subtitle">Never mind, just add a new trip and set out.</string>
    <string name="no_upcoming_trips_title">You have no upcoming trips yet</string>
    <string name="no_upcoming_trips_subtitle">Start a new adventure by adding a new trip.</string>
    <string name="datepicker_title_default">Select date</string>
    <string name="timepicker_title_default">Select time</string>
    <string name="enddate_before_startdate">End date cannot be prior to start date</string>
    <string name="checkout_before_checkin">Check-out cannot be prior to check-in</string>
    <string name="arrival_before_departure">Arrival cannot be prior to departure</string>
    <string name="add_trip">Add trip</string>
    <string name="name">Name</string>
    <string name="name_your_trip_mandatory">Name your trip (mandatory)</string>
    <string name="start_date">Start date</string>
    <string name="when_your_trip_starts">When your trip starts</string>
    <string name="end_date">End date</string>
    <string name="when_your_trip_ends">When your trip ends</string>
    <string name="description">Description</string>
    <string name="describe_your_trip">Describe your trip</string>
    <string name="trip_overview_overview">Overview</string>
    <string name="trip_overview_itinerary">Itinerary</string>
    <string name="trip_overview_expenses">Expenses</string>
    <string name="duration">Duration</string>
    <string name="starts">Starts:</string>
    <string name="ends">Ends:</string>
    <string name="accommodation_empty">You haven\'t add any accommodation yet</string>
    <string name="activities_empty">You haven\'t add any activity yet</string>
    <string name="transport_empty">You haven\'t add any transport yet</string>
    <string name="places_empty">You haven\'t add any place yet</string>
    <string name="documents_empty">You haven\'t add any document yet</string>
    <string name="activities">Activities</string>
    <string name="transport">Transport</string>
    <string name="accommodation">Accommodation</string>
    <string name="places">Places</string>
    <string name="documents">Documents</string>
    <string name="admin">Admin</string>
    <string name="editor">Editor</string>
    <string name="viewer">Viewer</string>
    <string name="travellers">Travellers</string>
    <string name="manage">Manage</string>
    <string name="delete_trip">Delete trip</string>
    <string name="edit_trip">Edit trip</string>
    <string name="save_to_calendar">Save to calendar</string>
    <string name="please_wait">Please wait…</string>
    <string name="add_accommodation">Add accommodation</string>
    <string name="add_transport">Add transport</string>
    <string name="add_place">Add place</string>
    <string name="add_activity">Add activity</string>
    <string name="accommodation_updated">Accommodation updated</string>
    <string name="transport_updated">Transport updated</string>
    <string name="places_updated">Places updated</string>
    <string name="activities_updated">Activities updated</string>
    <string name="documents_updated">Documents updated</string>
    <string name="travellers_updated">Travellers updated</string>
    <string name="search">Search</string>
    <string name="find_your_accommodation">Find your accommodation</string>
    <string name="name_your_stay_mandatory">Name your stay (mandatory)</string>
    <string name="address">Address</string>
    <string name="where_will_you_stay">Where will you stay</string>
    <string name="check_in">Check-in</string>
    <string name="when_will_you_arrive">When will you arrive</string>
    <string name="check_out">Check-out</string>
    <string name="when_will_you_leave">When will you leave</string>
    <string name="type">Type</string>
    <string name="select_the_type">Select the type</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email</string>
    <string name="website">Website</string>
    <string name="search_by_clicking_on_the_icon">Search by clicking on the icon</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="provide_a_link_to_the_route">Provide a link to the route</string>
    <string name="describe_your_activity">Describe your activity</string>
    <string name="describe_your_accommodation">Describe your accommodation</string>
    <string name="map_link">Map link</string>
    <string name="when_will_you_finish">When will you finish</string>
    <string name="name_your_activity_mandatory">Name your activity (mandatory)</string>
    <string name="when_will_you_start">When will you start</string>
    <string name="location">Location</string>
    <string name="other">Other</string>
    <string name="hiking">Hiking</string>
    <string name="cycling">Cycling</string>
    <string name="skiing">Skiing</string>
    <string name="running">Running</string>
    <string name="swimming">Swimming</string>
    <string name="climbing">Climbing</string>
    <string name="kayak">Kayak</string>
    <string name="cross_country">Cross country</string>
    <string name="hotel">Hotel</string>
    <string name="hostel">Hostel</string>
    <string name="pension">Pension</string>
    <string name="camp">Camp</string>
    <string name="outdoor">Outdoor</string>
    <string name="airbnb" translatable="false">Airbnb</string>
    <string name="hotel_overview">Hotel</string>
    <string name="hostel_overview">Hostel</string>
    <string name="pension_overview">Pension</string>
    <string name="leave_trip">Leave trip</string>
    <string name="none_delete">None (remove)</string>
    <string name="add_your_travel_mate">Add your travel mate</string>
    <string name="add_user_subtitle">Many hands make light work. Please enter the new travel mate\'s username and select her/his role.</string>
    <string name="user_role">User role</string>
    <string name="the_mate_s_username">The mate\'s username</string>
    <string name="add_member_by_clicking_on_the_icon">Add member by clicking on the icon</string>
    <string name="members">Members</string>
    <string name="select_currency">Select currency</string>
    <string name="create_room">Create room</string>
    <string name="create_room_subtitle">Create a new room where you can share expenses with other members of this room.</string>
    <string name="name_the_room">Name the room</string>
    <string name="currency">Currency</string>
</resources>